petit changement en js et html

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
       <label for="description">D&eacute;scription:* </label><input id="description" type="text" name="description" placeholder="caract&egrave;re" required>
       <label for="couleur">Couleur:</label><input id="couleur" type="color" name="couleur">
       <label for="poids">Poids:</label><input id="poids" type="number" name="poids" placeholder="poids en gramme" min="0">
-      <label for="reference">R&eacute;f&egrave;rence</label><button id="ref" >Cliquer ici</button> <p id="resultRef"></p>
-      <button id="valider"> Valider </button>
+      <button type="button" id="valider"> Valider" </button>
     </form>
   </section>
   <section id="liste">
@@ -54,11 +53,7 @@
           <th></th>
         </tr>
       </thead>
-      <tbody>
-        <tr id= "tbody">
-
-        </tr>
-
+      <tbody id="tbody">
       </tbody>
     </table>
   </section>
