--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
       <h1>BizOnline</h1>
     </header>
     <main>
-      <button id="nouveauProduit" class="btn">Nouveau Produit</button>
-      <button id="listeProduit" class="btn">Consultez vos Produits</button>
+      <a href="#formulaire"><button id="nouveauProduit" class="btn">Nouveau Produit</button></a>
+      <a href="#liste"><button id="listeProduit" class="btn">Consultez vos Produits</button></a>
     </main>
     <footer>
       <button id="infos">Infos</button>
     </footer>
   </section>
 
-  <section id="formulaire">
+  <section id="formulaire" >
     <h2>Nouveau Produit</h2>
     <form>
-      <label for="nom">Nom:* </label><input id="nom" type="text" name="Nom" placeholder="ex: chocolat" autofocus required>
-      <label for="Prix">Prix:* </label><input id="prix" type="text" name="Prix" placeholder="ex: 20.28" required>
-      <label for="description">D&eacute;scription:* </label><input id="description" type="text" name="description" placeholder="caract&egrave;re" required>
-      <label for="couleur">Couleur:</label><input id="couleur" type="color" name="couleur">
-      <label for="poids">Poids:</label><input id="poids" type="number" name="poids" placeholder="poids en gramme" min="0">
-      <button type="button" id="valider"> Valider" </button>
+      <label for="nom">Nom:* </label><input id="nom" type="text" name="Nom" placeholder="ex: chocolat" autofocus required><br>
+      <label for="Prix">Prix:* </label><input id="prix" type="text" name="Prix" placeholder="ex: 20.28" required><br>
+      <label for="description">D&eacute;scription:* </label><input id="description" type="text" name="description" placeholder="caract&egrave;re" required><br>
+      <label for="couleur">Couleur:</label><input id="couleur" type="color" name="couleur"><br>
+      <label for="poids">Poids:</label><input id="poids" type="number" name="poids" placeholder="poids en gramme" min="0"><br>
+      <button type="button" id="valider"> Valider </button><br>
     </form>
   </section>
+
   <section id="liste">
     <h2>Vos Produits</h2>
     <table>
@@ -46,10 +47,10 @@
           <th>Nom</th>
           <th>Prix</th>
           <th>Description</th>
+          <th>Référence</th>
           <th>Image</th>
           <th>Couleur</th>
           <th>Poids</th>
-          <th>Référence</th>
           <th></th>
         </tr>
       </thead>
