--- a/index.html
+++ b/index.html
@@ -14,41 +14,47 @@
 </head>
 
 <body>
-  <section id="accueil">
-    <header>
+    <main id="debut">
       <h1>BizOnline</h1>
-    </header>
-    <main>
-      <a href="#formulaire"><button id="nouveauProduit" class="btn">Nouveau Produit</button></a>
-      <a href="#liste"><button id="listeProduit" class="btn">Consultez vos Produits</button></a>
+      <div id="principal">
+        <div class="contenu">
+          <figure>
+            <a href="#formulaire">
+            <img  id="nouveauProduit" class="btn" src="assets/image/ajouter.png" alt="ajouter icone">
+          </a></figure>
+        <p> Nouveau Produit</p>
+        </div>
+        <div class="contenu">
+          <figure>
+            <a href="#liste">
+            <img  id="listeProduit" class="btn" src="assets/image/liste.png" alt="ajouter icone">
+          </a></figure>
+          <p>Vos produits</p>
+      </div>
+    </div>
+    <a href="assets/pdf/info.pdf"><button id="infos">Infos</button></a>
     </main>
-    <footer>
-      <button id="infos">Infos</button>
-    </footer>
-  </section>
-
-  <section id="formulaire" >
-    <h2>Nouveau Produit</h2>
+    <section id="formulaire" >
     <form>
-      <label for="nom">Nom:* </label><input id="nom" type="text" name="Nom" placeholder="ex: chocolat" autofocus required><br>
+      <label for="nom">Nom:* </label><input id="nom" type="text" name="Nom" placeholder="ex: chocolat" required><br>
       <label for="Prix">Prix:* </label><input id="prix" type="text" name="Prix" placeholder="ex: 20.28" required><br>
-      <label for="description">D&eacute;scription:* </label><input id="description" type="text" name="description" placeholder="caract&egrave;re" required><br>
+      <label for="description">D&eacute;scription:* </label><input id="description" type="text" name="description" required><br>
       <label for="couleur">Couleur:</label><input id="couleur" type="color" name="couleur"><br>
       <label for="poids">Poids:</label><input id="poids" type="number" name="poids" placeholder="poids en gramme" min="0"><br>
-      <button type="button" id="valider"> Valider </button><br>
+      <input type="submit" id="valider" name= "Valider">
     </form>
+    <a href= "#debut"><button id="accueil">Accueil</button></a>
   </section>
 
   <section id="liste">
-    <h2>Vos Produits</h2>
     <table>
       <thead>
         <tr>
+          <th></th>
           <th>Nom</th>
           <th>Prix</th>
           <th>Description</th>
           <th>Référence</th>
-          <th>Image</th>
           <th>Couleur</th>
           <th>Poids</th>
           <th></th>
@@ -57,6 +63,7 @@
       <tbody id="tbody">
       </tbody>
     </table>
+    <a href= '#debut'><button id="accueil">Accueil</button></a>
   </section>
 </body>
 
